# fastnetmon-python

./: README.md  pyproject.toml
fastnetmon_api/: __init__.py  api.py  types.py
